--- a/Games/Seahorse/assets/css/style.css
+++ b/Games/Seahorse/assets/css/style.css
@@ -14,3 +14,10 @@
     transform       : translate(-50%, -50%);
     background-color: #4d79dc;
 }
+
+#layer1,
+#layer2,
+#layer3,
+#layer4 {
+    display: none;
+}
