--- a/zTemplate/style.css
+++ b/zTemplate/style.css
@@ -2,12 +2,11 @@
     margin    : 0;
     padding   : 0;
     box-sizing: border-box;
+    overflow  : hidden;
 }
 
 #canvas {
-    position: absolute;
-    top     : 0;
-    left    : 0;
-    width   : 100vw;
-    height  : 100vh;
+    display: block;
+    margin : 50px auto;
+    border : 1px dashed black;
 }
